--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
-@import 'tailwindcss';
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Share+Tech&family=Tangerine:wght@400;700&display=swap");
+@import "tailwindcss";
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -6,6 +7,58 @@
 @source '../**/*.js';
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans: "Instrument Sans", ui-sans-serif, system-ui, sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+        "Noto Color Emoji";
+    --font-cursive: "Tangerine", cursive;
+
+    --color-primary: #35023f;
+    --color-secondary: #cbc5ea;
+    --color-dark: #25291c;
+    --color-danger: #db2955;
+    --color-light: #d4f5f5;
+    --color-accent: #f9a620;
+    --color-success: #4caf50;
+}
+
+.custom-shape-divider-bottom-1748494852 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1748494852 svg {
+    position: relative;
+    display: block;
+    width: calc(110% + 1.3px);
+    height: 98px;
+}
+
+.custom-shape-divider-bottom-1748494852 .shape-fill {
+    fill: #ffffff;
+}
+
+.custom-shape-divider-top-1748671079 {
+    position: absolute;
+    top: -1px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1748671079 svg {
+    position: relative;
+    display: block;
+    width: calc(300% + 1.3px);
+    height: 185px;
+}
+
+.custom-shape-divider-top-1748671079 .shape-fill {
+    fill: #ffffff;
 }
